    * Add new help2man dependency
    * Add ${misc:Depends} entries to binary dependencies
    * Add versioned dependency on debhelper
    * Update to Standard-Version: 3.9.2.0 (added Homepage: field to
      debian/control)
    * Unversion ofx's conflict with libofx2; it's been long enough that only
      libofx4 should be in the wild.
    * Update libofx-dev description
  * Add debian/watch file
  * debian/rules:
    * Back up generated files during the build, in order to minimize noise in
      debdiffs.
    * Don't ignore make clean failures
    * Use dh_installman to install manual pages
  * New patches:
    * 0001-Suppress-help2man-info-page-reference.patch:
      Suppress reference to nonexistent info page in generated manpages
    * 0002-Fix-formatting-of-ofxdump-usage-message-so-help2man-.patch:
      Fix leading spaces in ofxdump --help output confusing help2man
  * debian/compat: Update debhelper compatibility level to 5
  * debian/copyright: Specifically reference GPL-2 rather than GPL in
    common-licenses
  * debian/libofx-dev.docs: Add doc-base registration for libofx-dev HTML
    reference docs

 -- Bryan Donlan <bdonlan@gmail.com>  Wed, 11 May 2011 22:35:23 -0400

libofx (1:0.9.0-3) unstable; urgency=low

  * lib/ofx_preproc.c (ofx_proc_file): Make iconv buffer twice as big in
    case input files include non-ASCII UTF-8 characters.  Patch thanks to
    Jerome Vouillon (jerome.Vouillon@pps.jussieu.fr).  (Closes: 493597)
  
  * Acknowledge NMU from Andreas Barth. (Thanks Andreas!) (Closes: #417361)
  * Acknowledge NMU from Chris Lamb. (Thanks Chris!) (Closes: #474860)

 -- Thomas Bushnell, BSG <tb@debian.org>  Mon, 04 Aug 2008 23:16:30 -0700

libofx (1:0.9.0-2.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS with GCC 4.3 (Closes: #474860)
  * debian/control:
    - Bump Standards-Version to 3.7.3.
    - Use ${binary:Version} instead of ${Source-Version}.
  * Call distclean in debian/rules clean target.
