@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Bryan Donlan <bdonlan@gmail.com>
 Standards-Version: 3.9.2.0
 Homepage: http://libofx.sourceforge.net/
-Build-Depends: libosp-dev (>= 1.5.1.0-2.1), debhelper (>= 5), gengetopt, curl, libcurl4-gnutls-dev, libxml++2.6-dev, help2man
+Build-Depends: libosp-dev (>= 1.5.1.0-2.1), debhelper (>= 5), gengetopt, curl,
+  libcurl4-gnutls-dev, libxml++2.6-dev, help2man, automake (>= 1.11), autoconf (>= 2.67),
+  libtool
 
 Package: libofx4
 Architecture: any
